--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 *.pyc                       
 __pycache__          
 *~       
-*.sqlite3   #for SQLite                                                              
+#For SQLite files
+*.sqlite3                                                   
 # /static
