Update settings.py and .gitignore for static files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 __pycache__          
 *~       
 #For SQLite files
-*.sqlite3                                                   
-# /static
+*.sqlite3
+#For static files.                                                   
+/static
