--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ psycopg2-binary = "*"
 whitenoise = "*"
 
 [dev-packages]
+pytest-django = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.9"
