--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.pyc                       
 __pycache__          
 *~       
+#For environment variables
+.env
 #For SQLite files
 *.sqlite3
 #For static files.                                                   
