--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pytest-django = "*"
 pytest-cov = "*"
 selenium = "*"
 isort = "*"
+django-debug-toolbar = "*"
 
 [requires]
 python_version = "3.9"
