--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "==3.2.8"
 psycopg2-binary = "*"
 whitenoise = "*"
 gunicorn = "*"
+django-extensions = "*"
 
 [dev-packages]
 pytest-django = "*"
