Install pytest-dotenv and update to base test settings on environment variables.

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ whitenoise = "*"
 gunicorn = "*"
 django-extensions = "*"
 django-debug-toolbar = "*"
+pytest-dotenv = "*"
 
 [dev-packages]
 pytest-django = "*"
