--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,9 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = config.test_settings
+DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -v --nomigrations --cov --cov-report=html --ignore=accounts/
+;for pytest-dotenv
+env_override_existing_values = 1
+env_files =
+    .env
+    .env-test
