--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -9,13 +9,13 @@ ENV=DEV
 DJANGO_SECRET_KEY=nZC0-Vyg74-QMv7tlgdcHwLzkFdQZQ_be4yDtqNxuGQ
 
 ###  DJANGO_DEBUG ###
-# Set to 1 for development
-# Set to 0 for production 
+# Set to 1 for DEV
+# Set to 0 for PROD 
 DJANGO_DEBUG=1  
 
 DB_ENGINE=django.db.backends.postgresql_psycopg2
-DB_NAME=skeleton_pipenv
-DB_USER=skeleton_pipenv_admin
-DB_PASSWORD=skeleton_pipenv_admin_password
+DB_NAME=database_name
+DB_USER=database_admin
+DB_PASSWORD=database_admin_password
 DB_HOST=localhost
 DB_PORT=
