Add security variables and values to settings.py and EXAMPLE.env.

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -2,20 +2,30 @@
 # Options:  DEV, TEST, PROD 
 ENV=DEV
 
-###  DJANGO_SECRET_KEY ###
+### DJANGO_SECRET_KEY ###
 # Want to generate a secret key?  In python try this:
 # >> import secrets
 # >> secrets.token_urlsafe()
 DJANGO_SECRET_KEY=nZC0-Vyg74-QMv7tlgdcHwLzkFdQZQ_be4yDtqNxuGQ
 
-###  DJANGO_DEBUG ###
+### DJANGO_DEBUG ###
 # Set to 1 for DEV
 # Set to 0 for PROD 
 DJANGO_DEBUG=1  
 
+### DATABASE ###
 DB_ENGINE=django.db.backends.postgresql_psycopg2
 DB_NAME=database_name
 DB_USER=database_admin
 DB_PASSWORD=database_admin_password
 DB_HOST=localhost
 DB_PORT=
+
+### SECURITY ###
+SECURE_SSL_REDIRECT=1
+SECURE_HSTS_SECONDS=2592000
+SECURE_HSTS_INCLUDE_SUBDOMAINS=1
+SECURE_HSTS_PRELOAD=1
+SESSION_COOKIE_SECURE=1
+CSRF_COOKIE_SECURE=1
+
