Update settings.py, README.md, and EXAMPLE.env to clarify that email settings, although working, are commented out to allow users to get up and running without email set up.

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -21,6 +21,16 @@ DB_PASSWORD=database_admin_password
 DB_HOST=localhost
 DB_PORT=
 
+### EMAIL ###
+# Uncomment/update when ready to implement email.
+#EMAIL_BACKEND=    
+#DEFAULT_FROM_EMAIL=
+#EMAIL_HOST=
+#EMAIL_HOST_USER=
+#EMAIL_HOST_PASSWORD=
+#EMAIL_PORT=
+#EMAIL_USE_TLS=
+
 ### SECURITY ###
 SECURE_SSL_REDIRECT=1
 SECURE_HSTS_SECONDS=2592000
@@ -28,4 +38,3 @@ SECURE_HSTS_INCLUDE_SUBDOMAINS=1
 SECURE_HSTS_PRELOAD=1
 SESSION_COOKIE_SECURE=1
 CSRF_COOKIE_SECURE=1
-
