Update .coveragerc to ignore test files and folders.

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,8 +3,9 @@ omit =
      accounts/*,
      *apps.py,
      *asgi.py,
-      manage.py, 
-      *migrations/*,
-      *settings*,
-      *tests/*,
-      *wsgi.py,   
+     manage.py, 
+     *migrations/*,
+     *settings*,
+     *test*,
+     */tests/*,
+     *wsgi.py,   
