--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
-addopts = -v --nomigrations --cov --cov-report=html 
+addopts = -v --nomigrations --cov --cov-report=html --ignore=data/
 ;--ignore=accounts/
 ;for pytest-dotenv
 env_override_existing_values = 1
