--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ whitenoise = "*"
 gunicorn = "*"
 django-debug-toolbar = "*"
 django-extensions = "*"
+dj-database-url = "*"
 
 [dev-packages]
 pytest-dotenv = "*"
