Create separate Dockerfiles for dev and prod.  Update docker-compose.yml and heroku.yml to use appropriate Dockerfiles.

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,3 +1,5 @@
+# Dockerfile for production
+
 # Pull base image
 FROM python:3.10-slim
 
@@ -20,9 +22,9 @@ COPY Pipfile /code
 # RUN chmod u+x ./scripts/install_dependencies.sh && ./scripts/install_dependencies.sh
 
 # For Dev
-RUN pipenv install --system --dev --skip-lock
+# RUN pipenv install --system --dev --skip-lock
 # For Prod
-# RUN pipenv install --system --skip-lock
+RUN pipenv install --system --skip-lock
 
 # Copy project
 COPY . .
