Update Dockerfiles to only install [packages] for production.

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -24,7 +24,7 @@ COPY Pipfile /code
 # For Dev
 # RUN pipenv install --system --dev --skip-lock
 # For Prod
-RUN pipenv install --system --skip-lock
+RUN pipenv install --skip-lock
 
 # Copy project
 COPY . .
