Update Dockerfiles to include --system flag for pipenv installs.

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -22,7 +22,7 @@ COPY Pipfile /code
 # For Dev
 # RUN pipenv install --system --dev --skip-lock
 # For Prod
-RUN pipenv install --skip-lock
+RUN pipenv install --system --skip-lock
 
 # Copy project
 COPY . .
