--- a/heroku.yml
+++ b/heroku.yml
@@ -4,9 +4,13 @@ setup:
 build:
   docker:
     web: Dockerfile.prod
-release:
-  image: web
-  command:
-    - python manage.py collectstatic --noinput
+# release:
+#   image: web
+#   command:
+#     - django-admin migrate --noinput
+# release:
+#   image: web
+#   command:
+#     - python manage.py collectstatic --noinput
 run:
-  web: gunicorn config.wsgi
+  web: python manage.py collectstatic --noinput && gunicorn config.wsgi
