--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -26,3 +26,8 @@ RUN pipenv install --system --skip-lock
 
 # Copy project
 COPY . .
+
+# Change to non-root user... Not sure if this is necessary
+# REF:  https://devcenter.heroku.com/articles/container-registry-and-runtime#run-the-image-as-a-non-root-user
+RUN useradd -m myuser
+USER myuser
